<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ima"
    tools:context=".Step_Counter">

    <TextView
        android:id="@+id/stepCountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/steps_0"
        android:textSize="24sp"
        android:textColor="#FF0000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"/>

    <TextView
        android:id="@+id/distanceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance_0_m"
        android:textSize="24sp"
        android:textColor="#00FF00"
        android:layout_below="@id/stepCountTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textColor="#FF0000"
        android:layout_below="@id/distanceTextView"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <Button
        android:id="@+id/stopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:textColor="#0000FF"
        android:layout_below="@id/startButton"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/goalEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stopButton"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"

        android:hint="@string/enter_goal_steps"

        android:inputType="number"
        android:minHeight="48dp"
        android:textColorHint="#FF0000" />

    <Button
        android:id="@+id/setGoalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_goal"
        android:layout_below="@id/goalEditText"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

</RelativeLayout>
