<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bloodpressure"
    tools:context=".Blood_Pressure_Counter">

    <EditText
        android:id="@+id/systolicEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/systolic_pressure"
        android:textColor="#FF0000"
        android:textColorHint="#FF0000"
        android:inputType="numberDecimal"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/diastolicEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/diastolic_pressure"
        android:textColor="#FF0000"
        android:textColorHint="#FF0000"
        android:inputType="numberDecimal"
        android:layout_below="@id/systolicEditText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/checkPressureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_blood_pressure"
        android:layout_below="@id/diastolicEditText"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/pressureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#FF0000"
        android:layout_below="@id/checkPressureButton"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
